# bank-loan-model-monitoring-airflow-docker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: loan_monitoring_dag.py
config/: pipeline_config.yaml
data/sample/: loan_applications_sample.csv
database/: 01_create_schema.sql  02_monitoring_tables.sql
docs/: architecture.md  data_dictionary.md  example_deployment_report.md  example_monitoring_summary.json  methodology.md  model_card.md  recruiter_review_notes.md  runbook.md
docs/assets/: architecture.mmd
notebooks/: 00_architecture_and_business_context.ipynb  01_data_understanding_and_extraction.ipynb  02_eda_and_data_quality.ipynb  03_preprocessing_feature_engineering.ipynb  04_model_training_and_evaluation.ipynb  05_deployment_report.ipynb  06_drift_monitoring_reports.ipynb  07_airflow_docker_orchestration.ipynb
reports/model/: 20260619T044055_3c12a05e_deployment_report.md  20260619T133750_52a67176_deployment_report.md  20260619T133832_a14f1027_deployment_report.md  20260619T133958_de0cd238_deployment_report.md  20260619T152512_8c2018b0_deployment_report.md  20260619T153607_5fd2f75d_deployment_report.md  20260619T154242_01507529_deployment_report.md  20260619T155503_cb77a711_deployment_report.md  20260619T160416_8f70fcb3_deployment_report.md  20260619T160437_5c65848a_deployment_report.md  (+25 more)
scripts/: load_sample_to_postgres.py  run_local_monitoring.py
src/ml_monitoring/: config.py  (+1 more)
tests/: test_monitoring.py  test_preprocessing.py  test_sanity.py
(+15 files in other folders)
